--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -5,33 +5,35 @@
 #                                                     +:+ +:+         +:+      #
 #    By: ggoncalv <ggoncalv@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2025/03/13 11:25:28 by ggoncalv          #+#    #+#              #
-#    Updated: 2025/03/13 14:43:09 by ggoncalv         ###   ########.fr        #
+#    Created: 2024/10/22 11:19:48 by ggoncalv          #+#    #+#              #
+#    Updated: 2025/02/21 15:19:35 by ggoncalv         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = pipex
+NAME = libft.a
 
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
 
-SRC = pipex.c pipex_utils.c
-OBJ = $(SRC:.c=.o)
+SRC = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c \
+	ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c ft_strlcpy.c \
+	ft_strlcat.c ft_toupper.c ft_tolower.c ft_strchr.c ft_strrchr.c ft_strncmp.c \
+	ft_atoi.c ft_strdup.c ft_memchr.c ft_memcmp.c ft_strnstr.c ft_substr.c \
+	ft_calloc.c ft_strjoin.c ft_strtrim.c ft_putchar_fd.c ft_putstr_fd.c \
+	ft_putendl_fd.c ft_putnbr_fd.c ft_itoa.c ft_strmapi.c ft_striteri.c \
+	ft_split.c \
+	get_next_line_utils.c get_next_line.c \
+	ft_printf_utils.c ft_printf.c \
+	ft_atol.c ft_isspace.c
 
-LIBFT = ./Libft/libft.a
+OBJ = $(SRC:.c=.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJ)
-	make -C ./Libft
-	$(CC) $(CFLAGS) -g $(OBJ) $(LIBFT) -o $(NAME)
-
-debug:
-	make -C ./Libft
-	cc -g pipex.c pipex_utils.c ./Libft/libft.a -o pipex
+	ar rcs $(NAME) $(OBJ)
 
 clean:
-	make -C ./Libft fclean
 	rm -rf $(OBJ)
 
 fclean: clean
